# dissertation

doc/dissertation/: Makefile  dissertation.bib  dissertation.tex  evaluation.tex  isabellesym.sty  proposal  texcount.tex
doc/dissertation/chapters/conclusion/: conclusion.tex
doc/dissertation/chapters/evaluation/: evaluation.tex  plots
doc/dissertation/chapters/evaluation/figures/: example-tree.dot
doc/dissertation/chapters/implementation/: implementation.tex
doc/dissertation/chapters/implementation/figures/: dependencies.dot
doc/dissertation/chapters/introduction/: introduction.tex
doc/dissertation/chapters/preparation/: preparation.tex
doc/dissertation/chapters/preparation/figures/: dependencies.dot
doc/progress/: Makefile  progress.tex  title.tex
doc/proposal/: Makefile  proposal.bib  proposal.tex  summary  title.tex
doc/slides/: Makefile  slides.tex
extracted/: Arith.hs  Bench.hs  Fresh.hs  Orderings.hs  PreSimplyTyped.hs  Set.hs  SimplyTyped.hs  Spec.hs  infer.cabal
infer/: extracted.csv  graphs.ipynb  infer.cabal  map.csv
infer/bench/: Bench.hs  app.csv  biased-app.csv  fn.csv  lookup.csv  pair.csv  projections.csv  welltyped-map.csv  welltyped.csv
infer/samples/: Samples.hs
infer/src/: Arith.hs  Fresh.hs  Fun.hs  Lattices_Big.hs  List.hs  Option.hs  Orderings.hs  PreSimplyTyped.hs  Product_Type.hs  Set.hs  SimplyTyped.hs  Utils.hs
infer/test/: Spec.hs
plots/: plot.gp  plot.latex  plot.sh
src/: Fresh.thy  Permutation.thy  PreSimplyTyped.thy  ROOT  SimplyTyped.thy
