name:                infer
version:             0.1.0.0
author:              Michael Rawson
maintainer:          mr644@cam.ac.uk
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PreSimplyTyped, Fun, Fresh, SimplyTyped, Arith, Set, Lattices_Big, Orderings, List
  default-extensions:    ExplicitForAll
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      .
  default-language:    Haskell2010

Test-Suite test-infer
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base >=4.8 && <4.9, hspec >=2.2 && <2.3, QuickCheck >=2.8 && <2.9
  default-extensions:    ExplicitForAll

Benchmark bench-infer
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  build-depends: base, criterion
  default-extensions: ExplicitForAll
